--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://dhinesh20022806.github.io/quiz-app/",
+  "homepage": "https://dhinesh20022806.github.io/quiz-app/",
   "name": "quiz-app",
   "private": true,
   "version": "0.0.0",
